# agentbreaker

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  validation_report.md
.github/workflows/: ci.yml  docs.yml
agentbreaker/: __init__.py  circuit_breaker.py  langchain_adapter.py  openai_adapter.py
api/: index.html
backend/: .dockerignore  Dockerfile  agent.py  circuit_breaker.py  database.py  langchain_adapter.py  main.py  openai_adapter.py  realistic_agent.py  requirements.txt  rules.py  run_verification.py  scenarios.py
changelog/: index.html
concepts/how-it-works/: index.html
concepts/rule-engine/: index.html
docs/: api.md  changelog.md  quickstart.md  troubleshooting.md
docs/concepts/: how-it-works.md  rule-engine.md
docs/integrations/: langchain.md  openai-agents.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
integrations/langchain/: index.html
integrations/openai-agents/: index.html
overrides/: home.html
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
troubleshooting/: index.html
