[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbreaker"
version = "2.1.0"
description = "Inline circuit breaker for LLM agents to prevent stuck loops, budget overruns, and output bloat."
readme = "README.md"
authors = [
    { name = "vixde8" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
langchain = [
    "langchain",
    "langchain-core",
    "langchain-groq"
]
openai-agents = [
    "openai-agents"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentbreaker*"]
